--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
+    "google-auth-library": "^1.4.0",
     "jsonwebtoken": "^8.2.1",
     "mongoose": "^5.0.14",
     "mongoose-unique-validator": "^2.0.0",
